# GameOfLife

./: CMakeLists.txt  vcpkg.json
configurations/: config_1.txt  config_2.txt
include/: life.hpp  utility.hpp
src/: life.cpp  main.cpp  utility.cpp
tests/: test_user_says_yes.cpp
